# Halide

./: .clang-format  .clang-format-ignore  .clang-tidy  .clang_complete  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lldbinit  .pre-commit-config.yaml  .travis.yml  AsmX64Compiler.cpp  AsmX64Compiler.h  BUILD  BUILD.md  CImg.h  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Compiler.cpp  Compiler.h  Doxyfile  Doxyfile.in  FImage.cpp  FImage.h  HalideGenerator.cmake  HalideGenerator.mk  INSTALL  IRNode.cpp  IRNode.h  Interval.h  LICENSE.txt  LLVMCompiler.cpp  LLVMCompiler.h  MANIFEST.in  Makefile  Makefile.darwin  (+59 more)
apps/: .gitignore  CMakeLists.txt  CMakePresets.json  Util.h  autotune.py  benchmark.sh  benchmarks.out  benchmarks1.out  benchmarks2.out  benchmarks3.out  benchmarks3_parsed.out  diff01.txt  explore_gpu_parameters.sh  find_gpu_parameters.sh  png.h  print_all_results.sh  run_all_benchmarks.sh  run_all_experiments.sh  run_data_collection.sh  run_experiment.sh  run_one_benchmark.sh  run_rake_benchmarks.sh  run_sioutas.sh  vcpkg-configuration.json  vcpkg.json
apps/HVXThreads/: Makefile  bld-roid  compile_process_and_run  go.hw.sh  go.roid.sh  go.sh  go.sim.sh  pipeline.cpp  pipeline_cpu.h  pipeline_hvx128.h  pipeline_hvx64.h  process.cpp
apps/HelloAndroid/: .gitignore  AndroidManifest.xml  BUILD  README.md  build-gradle.sh  build.gradle  build.sh  build.xml  gradlew  local.properties
apps/HelloAndroidCamera2/: .gitignore  .project  AndroidManifest.xml  README.md  TODO.txt  ant.properties  build-gradle.sh  (+4 more)
boost_python_bindings/: CMakeLists.txt  readme.text  requirements.txt
dependencies/: CMakeLists.txt  README.md  update-spirv.sh  update-vulkan.sh
doc/: ApproximationDesign.md  BuildingHalideWithCMake.md  BuildingV8.md  CMakeBuild.md  CMakeDeveloper.md  CMakeLists.txt  CMakePackage.md  CodeStyleCMake.md  Coverage.md  FuzzTesting.md  HalideCMakePackage.md  Hexagon.md  Python.md  RunGen.md  Testing.md  Vulkan.md  WebAssembly.md  WebGPU.md
packaging/: CMakeLists.txt  HalideConfig.cmake  HalideConfig.cmake.in  HalideHelpersConfig.cmake  Linux.cmake  Unix.cmake  macOS.cmake
python_bindings/: .gitignore  CMakeLists.txt  FindHalide.cmake  Makefile  README.md  cHalide.i  cHalide.py  halide.py  py_util.cpp  py_util.h  pyproject.toml  readme.md  readme.text  requirements.txt  run_apps.sh  run_tests.sh  run_tutorial.sh  setup.py  test.cmake  test_halide.py  todo.txt
src/: .gitignore  AMDGPUOffload.cpp  AMDGPUOffload.h  AMXReqPerm.cpp  AMXReqPerm.h  ARMOptimize.cpp  ARMOptimize.h  AbstractGenerator.cpp  AbstractGenerator.h  AddAtomicMutex.cpp  AddAtomicMutex.h  AddImageChecks.cpp  AddImageChecks.h  AddParameterChecks.cpp  AddParameterChecks.h  AddSplitFactorChecks.cpp  AddSplitFactorChecks.h  AddTypeChangeChecks.cpp  AddTypeChangeChecks.h  AlignGPUBuffers.cpp  AlignGPUBuffers.h  AlignLoads.cpp  AlignLoads.h  AllocationBoundsInference.cpp  AllocationBoundsInference.h  ApplyImplementWith.cpp  ApplyImplementWith.h  ApplyImplementWithEmit.cpp  ApplyImplementWithEmit.h  ApplySplit.cpp  ApplySplit.h  ApplySplits.cpp  ApplySplits.h  ApproximateDifferences.cpp  ApproximateDifferences.h  Approximation.cpp  Approximation.h  ApproximationTables.cpp  ApproximationTables.h  Argument.cpp  (+779 more)
test/: .gitignore  BUILD  CMakeLists.txt  HalideGenerator.cmake  README.md  README.txt  _tags  argmax.cpp  bitwise_ops.cpp  bound.cpp  bounds.cpp  bounds_inference.cpp  bounds_query.cpp  chunk.cpp  chunk_sharing.cpp  clamped_vector_load.cpp  clock.h  compile_to_lowered_stmt.cpp  computed_index.cpp  const_division.cpp  constraints.cpp  custom_allocator.cpp  debug_to_file.cpp  dynamic_reduction_bounds.cpp  evil_parallel_reductions.cpp  fast_pow.cpp  gameoflife.cpp  gpu_large_alloc.cpp  handle.cpp  heap_cleanup.cpp  hello_gpu.cpp  image_of_lists.cpp  inline_reduction.cpp  input_image_bounds_check.cpp  integer_powers.cpp  internal.cpp  jit_stress.cpp  lambda.cpp  lerp.cpp  loop_invariant_extern_calls.cpp  (+23 more)
tools/: BUILD  CMakeLists.txt  GenGen.cpp  HalideImageIO.h  RunGen.cpp  RunGen.h  RunGenMain.cpp  RunGenStubs.cpp  adam_server.py  augment_sample.cpp  bench_cost_model.sh  binary2cpp.cpp  bitcode2cpp.cpp  build_halide_h.cpp  bundle_static.sh  check_cmake_file_lists.py  check_cmake_style.py  clang-tidy-filter.sh  ctest-sde.sh  find_inverse.cpp  gengen.sh  halide.make  halide_benchmark.h  halide_complexfunc.h  halide_config.bzl.tpl  halide_config.cmake.tpl  halide_config.make.tpl  halide_distrib.BUILD  halide_hdf5_io.h  halide_image.h  halide_image_info.h  halide_image_io.h  halide_internal_build_defs.bzl  halide_malloc_trace.h  halide_thread_pool.h  halide_trace_config.h  jpeg.BUILD  launch_wasm_test.js  lldbhalide.py  llvm.BUILD  (+20 more)
tutorial/: .clang-format  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  clock.h  exec_test.bzl  image_io.h  lesson_01.cpp  lesson_01_basics.cpp  lesson_02.cpp  lesson_02_input_image.cpp  lesson_03.cpp  lesson_03_debugging_1.cpp  lesson_04.cpp  lesson_04_debugging_2.cpp  lesson_05_scheduling_1.cpp  lesson_06_realizing_over_shifted_domains.cpp  lesson_07_multi_stage_pipelines.cpp  lesson_08_scheduling_2.cpp  lesson_09_update_definitions.cpp  lesson_10_aot_compilation_generate.cpp  lesson_10_aot_compilation_run.cpp  lesson_11_cross_compilation.cpp  lesson_12_using_the_gpu.cpp  lesson_13_tuples.cpp  lesson_14_types.cpp  lesson_15_generators.cpp  lesson_15_generators_usage.sh  lesson_16_rgb_generate.cpp  lesson_16_rgb_generator.cpp  lesson_16_rgb_run.cpp  lesson_17_predicated_rdom.cpp  lesson_18_parallel_associative_reductions.cpp  lesson_19_wrapper_funcs.cpp  lesson_20_cloning_funcs.cpp  lesson_21_auto_scheduler_generate.cpp  lesson_21_auto_scheduler_run.cpp  lesson_22_jit_performance.cpp  lesson_22_serialization.cpp  (+3 more)
util/: BUILD  CMakeLists.txt  Halide-VS2017.natvis  Halide.natvis  HalideProf.cpp  HalideTrace.cpp  HalideTraceConfig.h  HalideTraceDump.cpp  HalideTraceUtils.cpp  HalideTraceUtils.h  HalideTraceViz.cpp  HalideTraceViz.md  bootstrap.py  find_inverse.c  inconsolata.h  run_test.py  util.py
(+7284 files in other folders)
